src/objects/FPA_Persona__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>Select the department which user belongs to</inlineHelpText>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Primary Work Location</inlineHelpText>
        <label>Office</label>
        <referenceTo>Office__c</referenceTo>
        <relationshipLabel>Sales Persona</relationshipLabel>
        <relationshipName>Sales_Persons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <inlineHelpText>Assign the user role</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rep</fullName>
                </value>
                <value>
                    <fullName>Engineer</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <inlineHelpText>Uniquely identifies each user</inlineHelpText>
        <label>User Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Sales Person</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Persona</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>